[package]
name = "rct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
csv-async = { version = "1.2.4", features = ["tokio"] }
futures = "0.3.21"
num_cpus = "1.13.1"
rust_decimal = { version = "1.23.1", features = ["serde-str"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
